need to fix header covering the content and columns need to be fixed as well, make them side by side

--- a/assets/stylesheets/sass/custom.sass
+++ b/assets/stylesheets/sass/custom.sass
@@ -20,7 +20,6 @@ h1
 	height: 200px
 	background-color: grey
 	margin: 1px
-	width: auto
 
 .col-md-8, .col-md-4
 	height: 200px
